--- a/atg-splash/public/css/app.css
+++ b/atg-splash/public/css/app.css
@@ -327,6 +327,7 @@ Colours:
 }
 
 .container-who h1 {
+    margin-top: 1rem !important;
     font-size: 10rem;
     color: white;
     font-weight: bolder;
