--- a/atg-splash/resources/css/app.css
+++ b/atg-splash/resources/css/app.css
@@ -57,6 +57,7 @@ Colours:
 }
 
 .container-who h1 {
+    margin-top: 1rem !important;
     font-size: 10rem;
     color: white;
     font-weight: bolder;
